Update social login icons to modern Bootstrap SVG versions

--- a/src/index.html
+++ b/src/index.html
@@ -75,33 +75,33 @@
                     <button
                             type="button"
                             id="FbBtn"
-                            class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3"
+                            class="btn btn-outline-primary rounded-circle text-start p-1 mx-3 mb-3"
                             aria-label="Log in with Facebook"
                             title="Log in with Facebook"
                             data-bs-toggle="tooltip"
                     >
-                        <img src="./assets/pics/Facebook-logo-w30-circle.png"
-                             alt="" role="presentation" aria-hidden="true">
+                        <img src="assets/icons/facebook.svg"
+                             alt="" width="32" role="presentation" aria-hidden="true">
                     </button>
                     <!-- Google button -->
                     <button type="button" id="GooBtn"
-                            class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3"
+                            class="btn btn-outline-primary rounded-circle text-start p-1 mx-3 mb-3"
                             aria-label="Log in with Google"
                             title="Log in with Google"
                             data-bs-toggle="tooltip"
                     >
-                        <img src="./assets/pics/Google__G__Logo_wb_h30.png"
-                             alt="" role="presentation" aria-hidden="true">
+                        <img src="assets/icons/google.svg"
+                             alt="" width="32" role="presentation" aria-hidden="true">
                     </button>
                     <!-- GitHub button -->
                     <button type="button" id="GitBtn"
-                            class="btn btn-dark btn-sm rounded-circle text-start p-1 mx-3 mb-3"
+                            class="btn btn-outline-primary rounded-circle text-start p-1 mx-3 mb-3"
                             aria-label="Log in with GitHub"
                             title="Log in with GitHub"
                             data-bs-toggle="tooltip"
                     >
-                        <img src="./assets/pics/github-mark-white_h30.png"
-                             alt="" role="presentation" aria-hidden="true">
+                        <img src="assets/icons/github.svg"
+                             alt="" width="32" role="presentation" aria-hidden="true">
                     </button>
                 </div>
             </form>
