--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <section aria-labelledby="loginSection" class="col-12 col-md-6 vh-100 bg-primary-subtle pt-5 overflow-auto">
             <h2 id="loginSection">Log in!</h2>
             <span>or</span>
-            <a href="#regUName">Please register!</a>
+            <a href="#regUName" aria-label="If you don't have an account, please register.">Please register!</a>
 
             <form class="mx-auto" style="max-width: 360px;">
                 <hr>
@@ -32,30 +32,32 @@
                            id="logEmail"
                            class="form-control"
                            placeholder="e.g. name@example.com"
+                           data-error="Email is missing or incorrect!"
                            aria-label="Email address (for login)"
-                           aria-describedby="email-add1 logWarn"
-                           required
-                    >
-                </div>
-
-                <!-- password comp -->
-                <div class="input-group input-group-sm mb-3">
+                           aria-describedby="email-add1"
+                           required>
+                    <div id="logEmailWarn"
+                         class="w-100 invisible text-danger lh-1"
+                         style="height: 2.1rem;"
+                         role="alert"
+                    ></div>
+                    <!-- password comp -->
                     <label class="input-group-text px-2 w-25" id="password-enter1" for="logPassword">Password:</label>
                     <input type="password"
                            name="login-password"
                            id="logPassword"
                            class="form-control"
-                           placeholder="At least 6 characters"
+                           placeholder="At least 1 character"
+                           data-error="Password is missing or incorrect!"
                            aria-label="Password (for login)"
-                           aria-describedby="password-enter1 logWarn"
+                           aria-describedby="password-enter1"
                            required
                     >
-                    <div id="logWarn"
+                    <div id="logPasswordWarn"
                          class="w-100 invisible text-danger lh-1"
                          style="height: 2.1rem;"
-                         aria-live="assertive"
-                    >Password or email is missing or incorrect!
-                    </div>
+                         role="alert"
+                    ></div>
                 </div>
 
                 <!-- loginButton comp -->
@@ -120,16 +122,16 @@
                            id="regUName"
                            class="form-control"
                            placeholder="e.g. John"
+                           data-error="Mandatory field! The username must be at least 3 characters long!"
                            aria-label="Username (for registration)"
-                           aria-describedby="username-add1 regUNameWarn"
+                           aria-describedby="username-add1"
                            required
                     >
                     <div id="regUNameWarn"
                          class="w-100 invisible text-danger lh-1"
                          style="height: 2.1rem;"
-                         aria-live="assertive"
-                    >Mandatory field! The username must be at least 3 characters long!
-                    </div>
+                         role="alert"
+                    ></div>
                 </div>
 
                 <!-- e-mail comp -->
@@ -140,16 +142,16 @@
                            id="regEmail"
                            class="form-control"
                            placeholder="e.g. name@example.com"
+                           data-error="Incorrect e-mail format!"
                            aria-label="Email address (for registration)"
-                           aria-describedby="email-add2 regEmailWarn"
+                           aria-describedby="email-add2"
                            required
                     >
                     <div id="regEmailWarn"
                          class="w-100 invisible text-danger lh-1"
                          style="height: 2.1rem;"
-                         aria-live="assertive"
-                    >Incorrect e-mail format!
-                    </div>
+                         role="alert"
+                    ></div>
                 </div>
 
                 <!-- password comp -->
@@ -160,17 +162,17 @@
                            id="regPass1"
                            class="form-control"
                            placeholder="At least 6 characters"
+                           data-error="Incorrect password format! Password must be at least six characters long!"
                            aria-label="Password (for registration)"
-                           aria-describedby="password-enter2 regPass1Warn"
+                           aria-describedby="password-enter2"
                            required
                            autocomplete="new-password"
                     >
                     <div id="regPass1Warn"
                          class="w-100 invisible text-danger lh-1"
                          style="height: 2.1rem;"
-                         aria-live="assertive"
-                    >Incorrect password format! Password must be at least six characters long!
-                    </div>
+                         role="alert"
+                    ></div>
                 </div>
 
                 <!-- password comp -->
@@ -180,17 +182,17 @@
                            id="regPass2"
                            class="form-control"
                            placeholder="Type the same you gave above"
+                           data-error="The passwords entered do not match!"
                            aria-label="Confirm password (for registration)"
-                           aria-describedby="password-enter3 regPass2Warn"
+                           aria-describedby="password-enter3"
                            required
                            autocomplete="new-password"
                     >
                     <div id="regPass2Warn"
                          class="w-100 invisible text-danger lh-1"
                          style="height: 2.1rem;"
-                         aria-live="assertive"
-                    >The passwords entered do not match!
-                    </div>
+                         role="alert"
+                    ></div>
                 </div>
 
                 <!-- registrationButton comp -->
