Fix invalid role="presentation" on img tags in buttons without alt attribute

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                             data-bs-toggle="tooltip"
                     >
                         <img src="assets/icons/facebook.svg"
-                             alt="" width="32" role="presentation" aria-hidden="true">
+                             alt="" width="32" aria-hidden="true">
                     </button>
                     <!-- Google button -->
                     <button type="button" id="GooBtn"
@@ -93,7 +93,7 @@
                             data-bs-toggle="tooltip"
                     >
                         <img src="assets/icons/google.svg"
-                             alt="" width="32" role="presentation" aria-hidden="true">
+                             alt="" width="32" aria-hidden="true">
                     </button>
                     <!-- GitHub button -->
                     <button type="button" id="GitBtn"
@@ -103,7 +103,7 @@
                             data-bs-toggle="tooltip"
                     >
                         <img src="assets/icons/github.svg"
-                             alt="" width="32" role="presentation" aria-hidden="true">
+                             alt="" width="32" aria-hidden="true">
                     </button>
                 </div>
             </form>
