--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gabor Halasz">
     <title>LoginPage</title>
-    <meta name="description" content="Frontend project built with HTML, CSS, Bootstrap, and JavaScript. Refactored with Webpack for modular development, integrated unit tests using Jest, and enhanced accessibility based on audit results. Demonstrates modern web development practices.">
+    <meta name="description"
+          content="Frontend project built with HTML, CSS, Bootstrap, and JavaScript. Refactored with Webpack for modular development, integrated unit tests using Jest, and enhanced accessibility based on audit results. Demonstrates modern web development practices.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
