Improve UI contrast and code consistency
- remove background color to enhance visual contrast,
- increase grayscale on the disabled 'Registration' button for better clarity,
- replace `==` with `===` in `myValidation` for strict comparison.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="row text-center">
         <div id="welcomePlace" class="d-none"></div>
         <h1 class="visually-hidden">Welcome to Login and Registration</h1>
-        <section aria-labelledby="loginSection" class="col-12 col-md-6 vh-100 bg-primary-subtle pt-5 overflow-auto">
+        <section aria-labelledby="loginSection" class="col-12 col-md-6 vh-100 pt-5 overflow-auto">
             <h2 id="loginSection">Log in!</h2>
             <span>or</span>
             <a href="#regUName" aria-label="If you don't have an account, please register.">Please register!</a>
@@ -110,7 +110,7 @@
                 </div>
             </form>
         </section>
-        <section aria-labelledby="signupSection" class="col-12 col-md-6 vh-100 bg-success-subtle py-5 overflow-auto">
+        <section aria-labelledby="signupSection" class="col-12 col-md-6 vh-100 py-5 overflow-auto">
             <h2 id="signupSection">Sign up!</h2>
             <form class="mx-auto" style="max-width: 360px;">
                 <hr>
